--- a/bid-tracker/src/index.css
+++ b/bid-tracker/src/index.css
@@ -8,7 +8,6 @@
   --success-color: #28a745;
 }
 
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -19,16 +18,134 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+
+/* ----  Header  ------ */
+.header-main {
+  background-color: rgb(183, 247, 255);
+  display: flex;
+  flex-grow: 1;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-between;
+  border-bottom: solid 5px var(--primary-color);
+}
+
+
+.header-main a {
+  color: white;
+  background-color: var(--danger-color);
+  padding: 4px;
+  margin: 4px;
+  border: solid 1px;
+  border-radius: 5px;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.header-main a:hover {
+  color: var(--dark-color);
+}
+
+.header-main a:active {
+  transform: scale(0.96);
+}
+
+
+.header-main button {
+  background: #000;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit;
+}
+
+.header-main ul {
+  display: flex;
+}
+
+.header-main .welcome span {
+  margin-right: 0.6rem;
+}
+
+
+/* ----  NavBar  ----  */
+
+.navbar {
+  background-color: rgb(252, 193, 193);
+  display: flex;
+  justify-content: space-evenly;
+  flex-grow: 1;
+  flex-wrap: wrap;
+  min-height: 30px;
+  border: 1px solid steelblue;
+  padding: 10px;
+}
+
+.navbar button {
+  background: white;
+  color: black;
+  border: none;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit;
+}
+
+
+/* ----  BidTrackMain  ---- */
+
+.bidtrackmain {
+  display: flex;
+  justify-content: space-evenly;
+
+}
+
+
+/* --- BidTrackContent  ---- */
+
+.bidtrackcontent {
+  background-color: lightslategrey;
+  flex-grow: 4;
+}
+
+
+
+/* --- BidTrackNav  ---- */
+
+.bidtracknav {
+  background-color: lightskyblue;
+  flex-grow: 1;
+  flex-direction: column;
+}
+
+
+
+
+
+
+
+
+/* ----  BitTrackBids  ---- */
+
+
 .container {
   max-width: 500px;
   margin-top: 100px;
   margin-left: 20px;
-  /*margin: 30px auto;*/
+  margin: 30px auto;
   overflow: auto;
   min-height: 300px;
-  border: 1px solid steelblue;
   padding: 30px;
-  border-radius: 5px;
+  /*border: 1px solid steelblue;
+  border-radius: 5px;*/
 }
 
 .header {
@@ -127,70 +244,3 @@ footer {
 
 
 
-
-
-
-/* Navbar */
-.navbar {
-  background: #fff;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.7rem 2rem;
-  position: fixed;
-  z-index: 1;
-  width: 100%;
-  font-weight: bold;
-  font-size: 16px;
-  top: 0;
-  border-bottom: solid 5px var(--primary-color);
-  opacity: 1.0;
-}
-
-.navbar ul {
-  display: flex;
-}
-
-.navbar a {
-  color: white;
-  background-color: var(--danger-color);
-  padding: 0.45rem;
-  margin: 0 0.25rem;
-  border: solid 1px;
-  border-radius: 5px;
-  font-weight: bold;
-  text-decoration: none;
-}
-
-.navbar a:hover {
-  color: var(--dark-color);
-}
-
-.navbar a:active {
-  transform: scale(0.96);
-}
-
-.navbar .welcome span {
-  margin-right: 0.6rem;
-}
-
-
-/* Navbar 
-.navbar {
-  display: block;
-  text-align: center;
-}
-
-.navbar ul {
-  text-align: center;
-  justify-content: center;
-}
-
-.navbar h1 {
-  margin-bottom: 1rem;
-}
-
-.navbar .welcome {
-  display: none;
-}
-*/
