--- a/bid-tracker/src/index.css
+++ b/bid-tracker/src/index.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 
 :root {
-  --primary-color: #17a2b8;
+  --header-color: #36453b;
+  --navbar-color: #596869;
+  --bidtracknav-color: #c2c1a5;
+  --bidtrackcontent-color: #f5f9e9;
   --dark-color: #343a40;
   --light-color: #f4f4f4;
   --danger-color: #dc3545;
@@ -21,12 +24,13 @@ body {
 
 /* ----  Header  ------ */
 .header-main {
-  background-color: rgb(183, 247, 255);
+  background-color: var(--header-color);
+  color: white;
   display: flex;
-  flex-grow: 1;
   flex-wrap: wrap;
   width: 100%;
   justify-content: space-between;
+  align-items: center;
   border-bottom: solid 5px var(--primary-color);
 }
 
@@ -52,7 +56,7 @@ body {
 
 
 .header-main button {
-  background: #000;
+  background: var(--navbar-color);
   color: #fff;
   border: none;
   padding: 10px 20px;
@@ -76,9 +80,9 @@ body {
 /* ----  NavBar  ----  */
 
 .navbar {
-  background-color: rgb(252, 193, 193);
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   flex-grow: 1;
   flex-wrap: wrap;
   min-height: 30px;
@@ -87,7 +91,7 @@ body {
 }
 
 .navbar button {
-  background: white;
+  background: var(--bidtracknav-color);
   color: black;
   border: none;
   padding: 10px 20px;
@@ -99,12 +103,18 @@ body {
   font-family: inherit;
 }
 
+.navbar button:active {
+  transform: scale(.96);
+}
+
 
 /* ----  BidTrackMain  ---- */
 
 .bidtrackmain {
   display: flex;
   justify-content: space-evenly;
+  max-height: 800px;
+  min-height: 800px;
 
 }
 
@@ -112,8 +122,9 @@ body {
 /* --- BidTrackContent  ---- */
 
 .bidtrackcontent {
-  background-color: lightslategrey;
-  flex-grow: 4;
+  background-color: var(--bidtrackcontent-color);
+  flex-grow: 8;
+  
 }
 
 
@@ -121,9 +132,11 @@ body {
 /* --- BidTrackNav  ---- */
 
 .bidtracknav {
-  background-color: lightskyblue;
+  display: flex;
+  background-color: var(--bidtracknav-color);
   flex-grow: 1;
   flex-direction: column;
+  align-items: center;
 }
 
 
@@ -137,7 +150,7 @@ body {
 
 
 .container {
-  max-width: 500px;
+  max-width: 800px;
   margin-top: 100px;
   margin-left: 20px;
   margin: 30px auto;
@@ -184,7 +197,7 @@ body {
 }
 
 .bid {
-  background: #f4f4f4;
+  background: var(--bidtracknav-color);
   margin: 5px;
   padding: 10px 20px;
   cursor: pointer;
