Moved CRUD operations over to server and database

--- a/bid-tracker/src/index.css
+++ b/bid-tracker/src/index.css
@@ -139,7 +139,12 @@ body {
   align-items: center;
 }
 
-
+.navselectheader {
+  margin-top: 10px;
+  text-decoration: underline;
+  font-size: 20px;
+  font-family: inherit;
+}
 
 
 
