--- a/react_frontend/src/index.css
+++ b/react_frontend/src/index.css
@@ -138,13 +138,12 @@ html, body {
 }
 
 .container {
-  flex: 1 1 auto;
+  flex: auto;
   max-width: 800px;
   margin-top: 10px;
   margin-left: 20px;
-  overflow: auto;
   min-height: 300px;
-  padding: 10px;
+  
   /*border: 1px solid steelblue;
   border-radius: 5px;*/
 }
@@ -281,10 +280,11 @@ footer {
   margin: 5px;
   padding: 10px 20px;
   cursor: pointer;
+  border-radius: 10px;
 }
 
 .bid.reviewed {
-  border-left: 5px solid green;
+  border-left: 10px solid green;
 }
 
 .bid h3 {
