--- a/react_frontend/src/index.css
+++ b/react_frontend/src/index.css
@@ -29,6 +29,46 @@ html, body {
 }
 
 
+/* ---- Login -------- */
+
+.login-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: var(--bidtrackcontent-color);
+  width: 100%;
+  height: 100%;
+}
+
+.login-container {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  width: 50%;
+}
+
+.login input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+.login button {
+  font-family: inherit;
+  background-color: var(--navbar-color);
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  margin-top: 15px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%;
+}
+
 
 /* ----  Header  ------ */
 .header-main {
@@ -199,6 +239,7 @@ footer {
   text-decoration: underline;
   font-size: 20px;
   font-family: inherit;
+  text-align: center;
 }
 
 .navselectitems {
@@ -259,6 +300,12 @@ footer {
   opacity: 0.8;
 }
 
+.navselect-tradebtns {
+  display: flex;
+  flex-direction: column;
+  margin-top: auto;
+  margin-bottom: 15px;
+}
 
 
 
@@ -290,7 +337,10 @@ footer {
 }
 
 .btn-trade {
-  display: flex;
+  align-self: center;
+  text-align: center;
+  width: 100%;
+  font-size: 12px;
 }
 
 .btn:focus {
