--- a/react_frontend/src/index.css
+++ b/react_frontend/src/index.css
@@ -28,14 +28,6 @@ html, body {
   height: 100%;
 }
 
-/* ----- img ----*/
-
-img {
-  width: 150%;
-  margin-top: 0px;
-  margin-left: 50px;
-  object-fit: cover;
-}
 
 
 /* ---- Login -------- */
@@ -169,7 +161,9 @@ img {
   display: flex;
   background-color: var(--bidtrackcontent-color);
   justify-content: space-evenly;
-  height: 100%
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 
@@ -186,7 +180,8 @@ img {
 .bidtrackcontent {
   display: flex;
   flex-direction: column;
-  margin: 10px;
+  margin-top: 0px;
+  margin-left: 10px;
 }
 
 .container {
@@ -208,18 +203,31 @@ footer {
 
 /* ---- BidTrackSummary ---- */
 
+.summary-container {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  flex-grow: 1;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+}
+
+
 .summary-table {
   font-family: inherit;
   border-collapse: collapse;
   width: 100%;
 }
 
-.summary_table td, th {
+.summary_table td {
   border: 1px solid #ddd;
   padding: 8px;
 }
 
 .summary-table th {
+  border: 1px solid #ddd;
+  padding: 8px;
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -330,10 +338,24 @@ footer {
 /* ----  BidTrackLandingPage  ---- */
 
 .bidtrack-landingpage {
-  margin: 10%;
+  position: absolute;
+  top: 15%;
+  left: 80%;
   color: white;
+  z-index: +2;
 }
 
+/* ----- img ----*/
+
+img {
+  display: block;
+  margin: -20%;
+  width: 140%;
+  margin-top: 0px;
+  z-index: +1;
+  overflow: hidden;
+  /*object-fit: cover;*/
+}
 
 
 /* ----  BitTrackBids  ---- */
