--- a/react_frontend/src/index.css
+++ b/react_frontend/src/index.css
@@ -204,6 +204,7 @@ footer {
 /* ---- BidTrackSummary ---- */
 
 .summary-container {
+  padding: 10px;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
@@ -388,6 +389,16 @@ img {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.bid p {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.bid ul {
+  margin-left: 30px;
 }
 
 .add-form {
